<resources>
    <string name="app_name">Calories Counter</string>


    <!-- Bottom Bar -->
    <string name="lb_stats">Stats</string>
    <string name="lb_diary">Diary</string>
    <string name="lb_home">Home</string>

    <!-- fragment_home -->
    <string name="breakfast_btn_title">Breakfast</string>
    <string name="launch_btn_title">Launch</string>
    <string name="dinner_btn_title">Dinner</string>

    <!-- fragment_diary -->
    <string name="diary_title">Diary</string>
    <string name="goals">My goals</string>
    <string name="name">Name Surname</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="weight_g">Goal Weight</string>
    <string name="save">Save</string>

    <!-- fragment_breakfast_list -->
    <string name="breakfast_title">Breakfast</string>
    <string name="total_calories">Total calories</string>
    <string name="list_empty">Your list is empty</string>

    <!-- fragment_breakfast_list -->
    <string name="list_title">List</string>

    <!-- fragment_Item -->
    <string name="input">Enter quantity</string>
    <string name="calories">Calories</string>
    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="add">Add</string>
    <string name="item_title">Item</string>
    <string name="item_brand_title">Brand</string>

    <!-- Database -->
    <string name="db_Item">Item</string>
    <string name="db_nomItem">nomItem</string>
    <string name="db_calories">calories</string>
    <string name="db_cabs">cabs</string>
    <string name="db_protein">protein</string>
    <string name="db_fat">fat</string>
    <string name="db_marque">marque</string>

    <!-- Database -->
    <string name="text_stat">Coming Soon</string>



</resources>