<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.caloriescounter.HomeFragment"
        android:label="@string/lb_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_toBreakfastList"
            app:destination="@id/breakfastListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/statsFragment"
        android:name="com.example.caloriescounter.StatsFragment"
        android:label="@string/lb_stats"
        tools:layout="@layout/fragment_stats" />
    <fragment
        android:id="@+id/diaryFragment"
        android:name="com.example.caloriescounter.DiaryFragment"
        android:label="@string/lb_diary"
        tools:layout="@layout/fragment_diary" />
    <fragment
        android:id="@+id/breakfastListFragment"
        android:name="com.example.caloriescounter.breakfastListFragment"
        android:label="@string/breakfast_title"
        tools:layout="@layout/fragment_breakfast_list">
        <action
            android:id="@+id/action_breakfastListFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
    </fragment>
    <fragment
        android:id="@+id/itemFragment"
        android:name="com.example.caloriescounter.ItemFragment"
        android:label="@string/item_title"
        tools:layout="@layout/fragment_item">
        <action
            android:id="@+id/action_itemFragment_to_breakfastListFragment"
            app:destination="@id/breakfastListFragment" />
        <argument
            android:name="item"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/listFragment"
        android:name="com.example.caloriescounter.listFragment"
        android:label="@string/list_title"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_listFragment_to_itemFragment"
            app:destination="@id/itemFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
</navigation>